[gd_scene format=3 uid="uid://bevlvruxr34ip"]

[ext_resource type="Script" uid="uid://dw23pof411khw" path="res://game/enemy/emeny_worm.gd" id="1_swa76"]
[ext_resource type="PackedScene" uid="uid://ci05xlan24oqs" path="res://game/objects/pickUps/Coin.tscn" id="2_kjktk"]
[ext_resource type="Texture2D" uid="uid://ui6t1g66fml7" path="res://image/enemy/test _enemy2.png" id="3_ahxes"]
[ext_resource type="Texture2D" uid="uid://bdtj13hn54rfh" path="res://image/enemy/test _enemy3.png" id="4_s5mru"]
[ext_resource type="Texture2D" uid="uid://c812uj2ae1ykd" path="res://image/enemy/test _enemy4.png" id="5_427lg"]


[sub_resource type="Curve" id="Curve_kjktk"]
_limits = [0.5, 1.5, 0.0, 1.0]
bake_resolution = 50
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.50199205, 1.5), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_0d423"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ahxes")
}, {
"duration": 1.0,
"texture": ExtResource("4_s5mru")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_427lg")
}, {
"duration": 1.0,
"texture": ExtResource("5_427lg")
}],
"loop": false,
"name": &"die",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huv4u"]
size = Vector2(49, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_cn8fk"]
radius = 984.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmj20"]
size = Vector2(68, 35)

[node name="EmenyWorm" type="CharacterBody2D" unique_id=1655288545 groups=["Enemy"]]
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 22
script = ExtResource("1_swa76")
coin_scene = ExtResource("2_kjktk")
dash_curve = SubResource("Curve_kjktk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1963768320]
sprite_frames = SubResource("SpriteFrames_0d423")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=59623340]
position = Vector2(2.5, 4)
shape = SubResource("RectangleShape2D_huv4u")

[node name="FieldViewArea" type="Area2D" parent="." unique_id=607490412]
scale = Vector2(0.75, 0.75)
monitorable = false

[node name="Field_of_View" type="CollisionShape2D" parent="FieldViewArea" unique_id=862790983]
visible = false
shape = SubResource("CircleShape2D_cn8fk")

[node name="HitArea" type="Area2D" parent="." unique_id=982591408]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea" unique_id=1413603581]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_wmj20")

[node name="BlindTimer" type="Timer" parent="." unique_id=1132297483]
wait_time = 0.2
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." unique_id=2010852584]
one_shot = true

[connection signal="body_entered" from="FieldViewArea" to="." method="_on_field_view_area_body_entered"]
[connection signal="body_exited" from="FieldViewArea" to="." method="_on_field_view_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="BlindTimer" to="." method="_on_blind_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
